week3/hw3.txt
Q1: It's not necessary to remove that line.
Brady removed that line because it was duplicated. Also,
since the goto case is deleted, this case will never be called.
Deleting the line "case_long_iso_time_style:" only makes the code more clear.

Q2: The new UNIX format might bring confusion to people who
don't understand English because the it has abbreviations of
months in English. Also, the new format might bring problems in
the systems purely of numbers without letters.

Q3: When I use the command ./randline.py -n 4 /dev/null,
the output is
raceback (most recent call last):
  File "./randline.py", line 70, in <module>
      main()
        File "./randline.py", line 64, in main
	    sys.stdout.write(generator.chooseline())
	      File "./randline.py", line 34, in chooseline
	          return random.choice(self.lines)
		    File "/usr/lib64/python2.7/random.py", line 274, in choice
		        return seq[int(self.random() * len(seq))]
			# raises IndexError if seq is empty
			IndexError: list index out of range
So, the problem here is that for a empty file, the seq variable is
empty. The index is out of range and thus raises an error.

Q4:There is a syntax error when invoked with Python3.
File "./randline.py", line 65
    except IOError as (errno, strerror):
                          ^
			  SyntaxError: invalid syntax
Python3 and python2 have different intepreters and thus some differences in
syntax. So there is syntax error when using Python3 to execute python2 script.

